core/pkg/opaprocessor/testdata/regocelparity/rules/pod-security-admission-restricted-applied-1/test/test/input/mutatingwebhook.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: test-webhook
  annotations:
    cert-manager.io/inject-ca-from: default/client
webhooks:
  - name: pod-label-add.trstringer.com
    clientConfig:
      service:
        namespace: default
        name: mutating-webhook
        path: /mutate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE"]
        scope: "Namespaced"
    sideEffects: None
    admissionReviewVersions: ["v1"]
